<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/title"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:gravity="center"
            android:textColor="@color/main_color"
            android:fontFamily="@font/Merriweather_BlackItalic"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/age"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/Merriweather_Regular"
            android:text="@string/age_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:gravity="center"
            android:text="@string/height"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/height_input"
            android:fontFamily="@font/Merriweather_Regular"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:text="@string/weight"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/Merriweather_Regular"
            android:text="@string/weight_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="10dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/male"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:textSize="25dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="15dp"
            android:background="#117bad"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            />

        <Button
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/female"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:textSize="25dp"
            android:layout_marginLeft="24dp"
            android:background="#fc038c"
            android:backgroundTint="@null"
            app:backgroundTint="@null"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/calculate"
            android:textSize="25dp"
            android:fontFamily="@font/Merriweather_BlackItalic"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bmi"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/Merriweather_Regular"
            android:text="@string/bmi_result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/Merriweather_BlackItalic"
            android:text="@string/result"
            android:textSize="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/result_result"
            android:fontFamily="@font/Merriweather_Regular"/>
    </LinearLayout>



</LinearLayout>


